fix text align

--- a/src/modules/components/text-editor/functions/Prepare.scss
+++ b/src/modules/components/text-editor/functions/Prepare.scss
@@ -1,10 +1,26 @@
 @import "../../../../Variables";
 
+.left_editor {
+  text-align: left;
+}
+
+.center_editor {
+  text-align: center;
+}
+
+.right_editor {
+  text-align: right;
+}
+
+.justify_editor {
+  text-align: justify;
+}
+
 .p_editor {
   display: block;
   margin-top: 1em;
   margin-bottom: 1em;
-  text-indent: 2em;
+  text-indent: 2em !important;
 }
 
 .h1_editor {
